[tool.poetry]
name = "BERT-AE"
version = "0.1.0"
description = ""
authors = ["florian.natterer@yahoo.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.23"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
scikit-learn = "^1.3.0"
certifi = "^2023.7.22"
isort = "^5.12.0"
pyod = "^1.0.9"
tqdm = "^4.65.0"
pythresh = "^0.3.1"
pybind11 = "^2.10.4"
requests = "2.27.1"
lightning = "^2.0.2"
torchtext = "^0.15.2"
torch = { version = "^2.0.1", source = "torch-cpu" }
pytest = "^7.3.1"
drain3 = "^0.9.11"
statsmodels = "^0.14.0"
mlflow = "^2.2.2"
pydantic = "1.10.8"

[tool.poetry.group.dev.dependencies]
setuptools = "^67.4.0"
black = "^23.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"